--- a/STRyper/Helpers and shared UI objects/ProgressWindow.xib
+++ b/STRyper/Helpers and shared UI objects/ProgressWindow.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="21701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="22155" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22155"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -18,7 +18,7 @@
             <rect key="frame" x="0.0" y="0.0" width="413" height="102"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="l3X-0i-43O">
+                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="l3X-0i-43O">
                     <rect key="frame" x="18" y="60" width="83" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Processing..." id="vpU-nh-4ZZ">
                         <font key="font" metaFont="system"/>
@@ -34,17 +34,17 @@
                 </progressIndicator>
                 <button toolTip="Cancel operation" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="TqJ-3l-b12" userLabel="stop">
                     <rect key="frame" x="378" y="29" width="15" height="15"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="15" id="E3M-V9-c62"/>
-                        <constraint firstAttribute="height" constant="15" id="GHy-y3-SNC"/>
-                    </constraints>
-                    <buttonCell key="cell" type="inline" title="Inline" bezelStyle="inline" image="close" imagePosition="only" alignment="center" inset="2" id="ayD-8w-xhi">
-                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="smallSystemBold"/>
+                    <buttonCell key="cell" type="recessed" title="Inline" bezelStyle="recessed" image="close" imagePosition="only" alignment="center" inset="2" id="ayD-8w-xhi">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
+                        <font key="font" metaFont="systemBold" size="12"/>
                         <string key="keyEquivalent" base64-UTF8="YES">
 Gw
 </string>
                     </buttonCell>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="15" id="E3M-V9-c62"/>
+                        <constraint firstAttribute="height" constant="15" id="GHy-y3-SNC"/>
+                    </constraints>
                     <connections>
                         <action selector="cancelOperation:" target="-2" id="8IH-3P-SmQ"/>
                     </connections>
