--- a/STRyper/Helpers and shared UI objects/RegionPopover.xib
+++ b/STRyper/Helpers and shared UI objects/RegionPopover.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="21701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="22155" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22155"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,7 +15,7 @@
         <customView translatesAutoresizingMaskIntoConstraints="NO" id="1YR-GY-uDS" userLabel="Bin Popover View">
             <rect key="frame" x="0.0" y="0.0" width="239" height="63"/>
             <subviews>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xt0-Za-4np">
+                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xt0-Za-4np">
                     <rect key="frame" x="16" y="35" width="44" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Name:" id="OLe-Gf-a7H">
                         <font key="font" metaFont="system"/>
@@ -23,7 +23,7 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField identifier="name" verticalHuggingPriority="750" tag="3" translatesAutoresizingMaskIntoConstraints="NO" id="2Wh-cG-IYp">
+                <textField identifier="name" focusRingType="none" verticalHuggingPriority="750" tag="3" translatesAutoresizingMaskIntoConstraints="NO" id="2Wh-cG-IYp">
                     <rect key="frame" x="63" y="32" width="164" height="22"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="130" id="5wS-Le-Ww1"/>
@@ -34,7 +34,7 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="kXZ-vF-mp2">
+                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="kXZ-vF-mp2">
                     <rect key="frame" x="16" y="10" width="38" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Start:" id="0Sx-hf-S2t">
                         <font key="font" metaFont="system"/>
@@ -42,7 +42,7 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField identifier="start" verticalHuggingPriority="750" tag="1" translatesAutoresizingMaskIntoConstraints="NO" id="1if-YG-kEb">
+                <textField identifier="start" focusRingType="none" verticalHuggingPriority="750" tag="1" translatesAutoresizingMaskIntoConstraints="NO" id="1if-YG-kEb">
                     <rect key="frame" x="56" y="10" width="65" height="16"/>
                     <constraints>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="65" id="lmw-jG-VIQ"/>
@@ -55,7 +55,7 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NYr-vS-aHR">
+                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NYr-vS-aHR">
                     <rect key="frame" x="127" y="10" width="31" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="End:" id="Pvl-WP-JPD">
                         <font key="font" metaFont="system"/>
@@ -63,7 +63,7 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField identifier="end" verticalHuggingPriority="750" tag="2" translatesAutoresizingMaskIntoConstraints="NO" id="hFL-5r-t4O">
+                <textField identifier="end" focusRingType="none" verticalHuggingPriority="750" tag="2" translatesAutoresizingMaskIntoConstraints="NO" id="hFL-5r-t4O">
                     <rect key="frame" x="162" y="10" width="65" height="16"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" bezelStyle="round" id="sUB-TK-TT6">
                         <numberFormatter key="formatter" formatterBehavior="custom10_4" usesGroupingSeparator="NO" formatWidth="-1" groupingSize="0" minimumIntegerDigits="1" maximumIntegerDigits="42" maximumFractionDigits="1" id="ymH-tY-e4d"/>
