--- a/STRyper/Helpers and shared UI objects/AutoBinPopover.xib
+++ b/STRyper/Helpers and shared UI objects/AutoBinPopover.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="21701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="22155" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22155"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,19 +12,19 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="hoE-CY-xdI">
+        <customView clipsToBounds="YES" id="hoE-CY-xdI">
             <rect key="frame" x="0.0" y="0.0" width="372" height="121"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="FPL-c8-hXA">
-                    <rect key="frame" x="139" y="95" width="95" height="16"/>
+                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="FPL-c8-hXA">
+                    <rect key="frame" x="141" y="95" width="91" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Generate bins" id="ud3-T7-i9g">
-                        <font key="font" metaFont="systemBold"/>
+                        <font key="font" metaFont="systemMedium" size="13"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="yPU-8O-5yr">
+                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="yPU-8O-5yr">
                     <rect key="frame" x="18" y="71" width="72" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Starting at:" id="WWd-Xk-Ivd">
                         <font key="font" usesAppearanceFont="YES"/>
@@ -32,7 +32,7 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField identifier="binStart" verticalHuggingPriority="750" tag="4" translatesAutoresizingMaskIntoConstraints="NO" id="ntV-mq-gDx">
+                <textField identifier="binStart" focusRingType="none" verticalHuggingPriority="750" tag="4" translatesAutoresizingMaskIntoConstraints="NO" id="ntV-mq-gDx">
                     <rect key="frame" x="91" y="68" width="60" height="22"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="60" id="Lj5-eN-kRo"/>
@@ -44,7 +44,7 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField horizontalHuggingPriority="252" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="JZD-YW-OrK">
+                <textField focusRingType="none" horizontalHuggingPriority="252" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="JZD-YW-OrK">
                     <rect key="frame" x="152" y="71" width="20" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="bp" id="MD8-lF-ONT">
                         <font key="font" usesAppearanceFont="YES"/>
@@ -52,7 +52,7 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField horizontalHuggingPriority="253" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oVU-8n-2Pw">
+                <textField focusRingType="none" horizontalHuggingPriority="253" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oVU-8n-2Pw">
                     <rect key="frame" x="207" y="71" width="65" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Ending at:" id="1yE-pG-6ms">
                         <font key="font" usesAppearanceFont="YES"/>
@@ -60,7 +60,7 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField identifier="binEnd" verticalHuggingPriority="750" tag="5" translatesAutoresizingMaskIntoConstraints="NO" id="4uF-eT-gKK">
+                <textField identifier="binEnd" focusRingType="none" verticalHuggingPriority="750" tag="5" translatesAutoresizingMaskIntoConstraints="NO" id="4uF-eT-gKK">
                     <rect key="frame" x="273" y="68" width="60" height="22"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" title="1005" bezelStyle="round" id="OH3-vC-gC7">
                         <numberFormatter key="formatter" formatterBehavior="custom10_4" numberStyle="decimal" usesGroupingSeparator="NO" formatWidth="-1" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="1" id="cQP-3o-3BV"/>
@@ -69,7 +69,7 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField horizontalHuggingPriority="253" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="K09-lL-IJB">
+                <textField focusRingType="none" horizontalHuggingPriority="253" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="K09-lL-IJB">
                     <rect key="frame" x="334" y="71" width="20" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="bp" id="Pt4-8e-K4Q">
                         <font key="font" usesAppearanceFont="YES"/>
@@ -77,7 +77,7 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField toolTip="The spacing between successive bins" horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="E2Q-Wj-oAw">
+                <textField toolTip="The spacing between successive bins" focusRingType="none" horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="E2Q-Wj-oAw">
                     <rect key="frame" x="18" y="38" width="38" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Every" id="pZH-4E-SM0">
                         <font key="font" usesAppearanceFont="YES"/>
@@ -85,7 +85,7 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <popUpButton toolTip="The spacing between successive bins" horizontalHuggingPriority="750" verticalHuggingPriority="750" tag="9" translatesAutoresizingMaskIntoConstraints="NO" id="mg7-Gr-ta9">
+                <popUpButton toolTip="The spacing between successive bins" tag="9" horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="mg7-Gr-ta9">
                     <rect key="frame" x="57" y="36" width="31" height="19"/>
                     <popUpButtonCell key="cell" type="recessed" title="1" bezelStyle="recessed" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" selectedItem="9FV-YD-lTA" id="E4C-6Q-vOr">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
@@ -103,7 +103,7 @@
                         </menu>
                     </popUpButtonCell>
                 </popUpButton>
-                <textField horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3cN-HB-7C4">
+                <textField focusRingType="none" horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3cN-HB-7C4">
                     <rect key="frame" x="89" y="38" width="20" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="bp" id="7gl-ea-57W">
                         <font key="font" usesAppearanceFont="YES"/>
@@ -111,7 +111,7 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="yes-aa-feE">
+                <textField focusRingType="none" horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="yes-aa-feE">
                     <rect key="frame" x="115" y="38" width="64" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Bin width:" id="Lnn-WT-lTT">
                         <font key="font" usesAppearanceFont="YES"/>
@@ -129,7 +129,7 @@
                         <action selector="takeDoubleValueFrom:" target="7Tm-JL-aq2" id="oPL-hL-Fki"/>
                     </connections>
                 </slider>
-                <textField horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rXk-Dl-jWh">
+                <textField focusRingType="none" horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rXk-Dl-jWh">
                     <rect key="frame" x="313" y="38" width="22" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="1.0" id="7Tm-JL-aq2">
                         <numberFormatter key="formatter" formatterBehavior="custom10_4" usesGroupingSeparator="NO" formatWidth="-1" groupingSize="0" minimumIntegerDigits="1" maximumIntegerDigits="4" minimumFractionDigits="1" maximumFractionDigits="1" id="hUx-kV-hHr"/>
@@ -138,11 +138,8 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <button verticalHuggingPriority="750" tag="6" translatesAutoresizingMaskIntoConstraints="NO" id="El3-eS-onG">
+                <button tag="6" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="El3-eS-onG">
                     <rect key="frame" x="-1" y="-2" width="187" height="32"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="a5K-OO-j8F"/>
-                    </constraints>
                     <buttonCell key="cell" type="smallSquare" title="Cancel" bezelStyle="smallSquare" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="6O0-5N-9xD">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -150,8 +147,11 @@
 Gw
 </string>
                     </buttonCell>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="a5K-OO-j8F"/>
+                    </constraints>
                 </button>
-                <button horizontalHuggingPriority="249" verticalHuggingPriority="750" tag="7" translatesAutoresizingMaskIntoConstraints="NO" id="b6s-x7-hIP" userLabel="Add Bins">
+                <button tag="7" horizontalHuggingPriority="249" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="b6s-x7-hIP" userLabel="Add Bins">
                     <rect key="frame" x="185" y="-2" width="188" height="32"/>
                     <buttonCell key="cell" type="smallSquare" title="Add Bins" bezelStyle="smallSquare" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Y05-79-wPk" userLabel="Add Bins">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -161,7 +161,7 @@ DQ
 </string>
                     </buttonCell>
                 </button>
-                <textField horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="6wU-Uv-wK2">
+                <textField focusRingType="none" horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="6wU-Uv-wK2">
                     <rect key="frame" x="334" y="38" width="20" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="bp" id="pqL-Km-pyw">
                         <font key="font" usesAppearanceFont="YES"/>
