--- a/STRyper/Helpers and shared UI objects/FilterPopover.xib
+++ b/STRyper/Helpers and shared UI objects/FilterPopover.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="21701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="22155" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22155"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,10 +12,10 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView translatesAutoresizingMaskIntoConstraints="NO" id="Kvm-1M-tEL">
+        <customView clipsToBounds="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kvm-1M-tEL">
             <rect key="frame" x="0.0" y="0.0" width="474" height="159"/>
             <subviews>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" tag="1" translatesAutoresizingMaskIntoConstraints="NO" id="faV-ce-Irz">
+                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" tag="1" translatesAutoresizingMaskIntoConstraints="NO" id="faV-ce-Irz">
                     <rect key="frame" x="90" y="133" width="294" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Show only genotypes meeting these conditions:" id="zku-Tg-YwD">
                         <font key="font" usesAppearanceFont="YES"/>
@@ -101,14 +101,14 @@
                         </predicateEditorRowTemplate>
                     </rowTemplates>
                 </predicateEditor>
-                <button toolTip="Ignore the case (uppercase, lowercase)" verticalHuggingPriority="750" tag="3" translatesAutoresizingMaskIntoConstraints="NO" id="KEX-Nx-8PB">
+                <button toolTip="Ignore the case (uppercase, lowercase)" tag="3" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="KEX-Nx-8PB">
                     <rect key="frame" x="18" y="36" width="97" height="18"/>
                     <buttonCell key="cell" type="check" title="Ignore case" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="ofs-GY-3Nh">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                 </button>
-                <textField hidden="YES" horizontalHuggingPriority="251" verticalHuggingPriority="750" tag="7" translatesAutoresizingMaskIntoConstraints="NO" id="Pcx-Tp-Ao2">
+                <textField hidden="YES" focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" tag="7" translatesAutoresizingMaskIntoConstraints="NO" id="Pcx-Tp-Ao2">
                     <rect key="frame" x="176" y="37" width="123" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Please, fill all fields." id="aGy-1R-GXt">
                         <font key="font" metaFont="system"/>
@@ -116,11 +116,8 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <button verticalHuggingPriority="750" tag="4" translatesAutoresizingMaskIntoConstraints="NO" id="5IM-f9-o6x">
+                <button tag="4" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="5IM-f9-o6x">
                     <rect key="frame" x="-1" y="-2" width="159" height="32"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="SKl-ci-iA3"/>
-                    </constraints>
                     <buttonCell key="cell" type="smallSquare" title="Cancel" bezelStyle="smallSquare" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="TPh-yt-gfl">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -128,18 +125,21 @@
 Gw
 </string>
                     </buttonCell>
-                </button>
-                <button verticalHuggingPriority="750" tag="5" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="n8f-HW-m3y">
-                    <rect key="frame" x="157" y="-2" width="160" height="32"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="30" id="bAp-67-gfC"/>
+                        <constraint firstAttribute="height" constant="30" id="SKl-ci-iA3"/>
                     </constraints>
+                </button>
+                <button tag="5" imageHugsTitle="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="n8f-HW-m3y">
+                    <rect key="frame" x="157" y="-2" width="160" height="32"/>
                     <buttonCell key="cell" type="smallSquare" title="Remove Filter" bezelStyle="smallSquare" image="close" imagePosition="trailing" alignment="center" state="on" borderStyle="border" inset="2" id="ovb-dD-cwA">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="bAp-67-gfC"/>
+                    </constraints>
                 </button>
-                <button horizontalHuggingPriority="249" verticalHuggingPriority="750" tag="6" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U6w-BN-9sw">
+                <button tag="6" imageHugsTitle="YES" horizontalHuggingPriority="249" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="U6w-BN-9sw">
                     <rect key="frame" x="316" y="-2" width="159" height="32"/>
                     <buttonCell key="cell" type="smallSquare" title="OK" bezelStyle="smallSquare" image="filter pressed" imagePosition="trailing" alignment="center" state="on" borderStyle="border" inset="2" id="TXg-TX-dn5" userLabel="Add Bins">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
